# LXMFy

./: .cursorignore  .deepsource.toml  .dockerignore  .gitignore  CHANGELOG.md  Dockerfile  Dockerfile.Build  Makefile  README.md  SECURITY.md  TODO.md  docker-compose.yml  donate.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: bandit.yml  bearer.yml  build-test.yml  docker.yml  docs.yml  publish.yml  safety.yml  test.yml
dave1/: bot.py
dave1/cogs/: basic.py
docker/: Dockerfile  docker-compose.yml
docs/: api.md  creating-bots.md  index.html  quick-start.md  style.css
examples/: storage_bot.py  test_bot.py
examples/cogs/: admin.py  time.py
examples/newsbot/: bot.py  requirements
lxmfy/: __init__.py  attachments.py  cli.py  colors.py  commands.py  config.py  core.py  events.py  help.py  middleware.py  permissions.py  scheduler.py  signatures.py  storage.py  validation.py  voice.py
lxmfy/templates/: __init__.py  echo_bot.py  meme_bot.py  note_bot.py  reminder_bot.py  wakeup_call_bot.py
scripts/: dev.py
tests/: conftest.py  pytest.ini  test_basic.py  test_cli.py  test_client.py  test_core.py  test_e2e.py  test_integration.py  test_propagation.py  test_signatures.py
